--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1>Formulário</h1>
+    <h1>formulário</h1>
     <form action="#" method="post">
         <label for="nome">Nome: </label>
         <input type="text" name="nome" id="nome" placeholder="Digite seu nome">
@@ -99,5 +99,11 @@
         <button type="submit">Enviar</button>
 
     </form>
+
+    <footer>
+        <hr>
+        <p>Copyright © 2024 Igor Reis. Todos os direitos reservados.</p>
+    </footer>
+
 </body>
 </html>
